--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
-Flask
-line-bot-sdk
-openai
-redis
-requests
-gunicorn
+Flask==2.3.3
+line-bot-sdk==3.0.0
+openai==1.3.0
+redis==5.0.0
+requests==2.31.0
+gunicorn==21.2.0
+schedule==1.2.0
